// common.proto
syntax = "proto3";
package pb;

option go_package = "github.com/gnet-io/gnet-examples/custom_protocol/pb;pb";

message CommonBody {
  uint32 cmdId = 1;
  string uid = 2;
  string nick = 3;
  string version = 4;
  bytes pbBody = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ChatMessage {
  string content = 1;
}
